[package]
name = "win_uds"
version = "0.2.0"
edition = "2024"
license = "Unlicense"
description = "Windows Unix Domain Socket"
repository = "https://github.com/kouhe3/win_uds"
[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
[dependencies]
socket2 = "0.6.1"
async-io = "2"
futures-io = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
